--- a/package.json
+++ b/package.json
@@ -20,10 +20,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.2",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.2",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.18.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mysql2": "^3.11.0",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.1",
@@ -33,6 +44,7 @@
     "@swc/core": "^1.4.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -41,6 +53,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "mysql": "^2.18.1",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
